文本可选择Label实现，待补充动态css样式绑定